[package]
name = "brisbane-bootloader"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.28.0", features = ["alloc"] }
uefi-services = { version = "0.25.0", features = [], default-features = false }
log = "0.4.21"
build-info = { version = "0.0.36", default-features = false }

[build-dependencies]
build-info-build = "0.0.36"
